# simple-spaghetti-website

./: .claude-output.json  .claude-plan.json  .claude-resolution.json  .conflict-info.json  .eslintrc.cjs  .gitignore  .review-feedback.txt  README.md  TESTING.md  about.html  demo_security_utils.py  hello-world.html  index.html  james.html  menu.html  package-lock.json  package.json  playwright.config.js  requirements.txt  resolve_readme.py  run-all-tests.sh  run.py  sidebar.html  spaghetti.html  styles.css  syntax_check.py  tailwind.config.js  test-crossbrowser.sh  test-integration.sh  test-results.md  test-server.js  test-structure.sh  test_admin_endpoints.py  test_admin_implementation.py  test_auth_implementation.py  test_data_store_validators.py  test_election_management.py  test_f1_models.py  test_imports.py  test_library_api.py  (+14 more)
.coo/: state.json
api/: README.md  (+12 more)
f1-analytics/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  test_models.py  test_syntax.py  validate_elo_implementation.py  validate_monitoring.py  validate_syntax.sh  verify_schema.py
f1-analytics/backend/alembic/: env.py
f1-analytics/backend/alembic/versions/: 001_initial_f1_analytics_schema.py  001_initial_f1_schema.py  001_initial_schema.py  002_add_geospatial_circuits.py
f1-analytics/backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
f1-analytics/backend/app/core/: __init__.py  config.py  exceptions.py  middleware.py  security.py
f1-analytics/backend/app/ingestion/: __init__.py  base.py  cli.py  config.py  qualifying_ingestion.py  race_ingestion.py
f1-analytics/backend/app/models/: __init__.py  circuit.py  driver.py  f1_models.py  prediction.py  prediction_accuracy.py  qualifying_result.py  race.py  race_result.py  team.py  user.py  weather_data.py
f1-analytics/backend/app/monitoring/: __init__.py  metrics.py  middleware.py  services.py
f1-analytics/backend/data_ingestion/: __init__.py  ingest_weather.py  run_tests.sh
f1-analytics/backend/ml/: __init__.py  elo_calculator.py
f1-analytics/backend/tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_elo_calculator.py  test_elo_service.py  test_health_checks.py  test_ingestion.py  test_main.py  test_security.py  test_session_management.py  test_validation_layer.py
(+682 files in other folders)
